--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,6 +75,8 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:$project.okhttp"
     implementation "com.google.code.gson:gson:$project.gson"
 
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation "junit:junit:4.12"
     androidTestImplementation "androidx.test:runner:$project.test"
     androidTestImplementation "androidx.test:rules:$project.test"
