--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,7 @@ project.ext {
     test = "1.1.0-alpha4"
     expresso = "3.2.0"
     constraint_lyt = "1.1.3"
+    coil = "0.7.0"
 }
 
 android {
@@ -56,6 +57,13 @@ android {
             resValue "string", "app_name", "Poke"
         }
     }
+    
+    kotlinOptions { jvmTarget = "1.8" }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
@@ -74,6 +82,7 @@ dependencies {
     implementation "com.squareup.okhttp3:okhttp:$project.okhttp"
     implementation "com.squareup.okhttp3:logging-interceptor:$project.okhttp"
     implementation "com.google.code.gson:gson:$project.gson"
+    implementation "io.coil-kt:coil:$project.coil"
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
