--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,37 +2,35 @@ apply plugin: 'com.android.application'
 
 apply plugin: 'kotlin-android'
 
-apply plugin: 'kotlin-android-extensions'
-
 project.ext {
     api_version = "v1"
     support = "28.0.0"
-    retrofit = "2.6.1"
-    okhttp = "4.1.0"
-    gson = "2.8.5"
+    retrofit = "2.11.0"
+    okhttp = "4.12.0"
+    gson = "2.10.1"
     lifecycle_version = "2.1.0"
-    ktx = "1.0.0"
-    ktx_appcompat = "1.1.0"
-    ktx_core = "1.2.0-alpha04"
-    test = "1.1.0"
-    expresso = "3.0.2"
+    ktx = "1.4.0"
+    ktx_appcompat = "1.7.0"
+    ktx_core = "1.15.0"
     material_dialogs = "3.1.0"
-    test = "1.1.0-alpha4"
-    expresso = "3.2.0"
-    constraint_lyt = "1.1.3"
+    test = "1.6.2"
+    expresso = "3.6.1"
+    constraint_lyt = "2.2.0"
     coil = "0.7.0"
 }
 
 android {
-    compileSdkVersion 28
-    buildToolsVersion "29.0.2"
+    compileSdk 35
     defaultConfig {
         applicationId "com.axier.poke"
-        minSdkVersion 16
-        targetSdkVersion 28
+        minSdkVersion 21
+        targetSdk 34
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    }
+    buildFeatures {
+        viewBinding true
     }
     buildTypes {
         debug {
@@ -64,18 +62,17 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    namespace 'com.axier.poke'
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "org.jetbrains.anko:anko-coroutines:$anko_version"
-    implementation "org.jetbrains.anko:anko:$anko_version"
 
-    implementation "androidx.appcompat:appcompat:$project.ktx_appcompat"
     implementation "androidx.core:core-ktx:$project.ktx_core"
-    implementation "androidx.recyclerview:recyclerview:$project.ktx"
     implementation "androidx.constraintlayout:constraintlayout:$project.constraint_lyt"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.10.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.10.1'
 
     implementation "com.squareup.retrofit2:retrofit:$project.retrofit"
     implementation "com.squareup.retrofit2:converter-gson:$project.retrofit"
@@ -83,11 +80,12 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:$project.okhttp"
     implementation "com.google.code.gson:gson:$project.gson"
     implementation "io.coil-kt:coil:$project.coil"
+    implementation 'androidx.appcompat:appcompat:1.7.0'
+    implementation 'androidx.recyclerview:recyclerview:1.4.0'
 
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    testImplementation "junit:junit:4.12"
+    testImplementation "junit:junit:4.13.2"
     androidTestImplementation "androidx.test:runner:$project.test"
-    androidTestImplementation "androidx.test:rules:$project.test"
+    androidTestImplementation "androidx.test:runner:$project.test"
+    androidTestImplementation "androidx.test:rules:1.6.1"
     androidTestImplementation "androidx.test.espresso:espresso-core:$project.expresso"
 }
